--- a/AppAndroid/app/src/main/res/navigation/nav_graph.xml
+++ b/AppAndroid/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.blog.app.ui.view.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/addBlogFragment"
+        android:name="com.blog.app.ui.view.AddBlogFragment"
+        android:label="fragment_add_blog"
+        tools:layout="@layout/fragment_add_blog" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.blog.app.ui.view.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_homeFragment_to_addBlogFragment"
+            app:destination="@id/addBlogFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_showBlogFragment"
+            app:destination="@id/showBlogFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.blog.app.ui.view.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        android:id="@+id/showBlogFragment"
+        android:name="com.blog.app.ui.view.ShowBlogFragment"
+        android:label="fragment_show_blog"
+        tools:layout="@layout/fragment_show_blog" />
 </navigation>
