--- a/AppAndroid/app/src/main/res/layout/item_blog.xml
+++ b/AppAndroid/app/src/main/res/layout/item_blog.xml
@@ -51,6 +51,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvFecha" />
 
+        <TextView
+            android:id="@+id/tvId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
