--- a/AppAndroid/app/src/main/res/layout/fragment_home.xml
+++ b/AppAndroid/app/src/main/res/layout/fragment_home.xml
@@ -67,6 +67,19 @@
                 app:layout_constraintStart_toEndOf="@+id/checkBoxAutor"
                 app:layout_constraintTop_toTopOf="@+id/checkBoxAutor" />
 
+            <ProgressBar
+                android:id="@+id/progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                />
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
