--- a/AppAndroid/app/src/main/res/layout/fragment_home.xml
+++ b/AppAndroid/app/src/main/res/layout/fragment_home.xml
@@ -19,8 +19,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="4dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/layoutNetwork"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/checBox_Titulo" />
@@ -32,8 +32,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:clickable="true"
-                android:src="@drawable/ic_launcher_foreground"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:src="@drawable/add_circle_outline_24"
+                app:layout_constraintBottom_toTopOf="@+id/layoutNetwork"
                 app:layout_constraintEnd_toEndOf="parent" />
 
             <CheckBox
@@ -79,6 +79,36 @@
 
                 />
 
+            <LinearLayout
+                android:id="@+id/layoutNetwork"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:visibility="gone"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="50dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_wifi_off_24" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:text="Sin conexion a Internet"
+                    android:textAlignment="center"
+                    android:textSize="24sp" />
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
