--- a/AppAndroid/app/src/main/res/navigation/nav_graph.xml
+++ b/AppAndroid/app/src/main/res/navigation/nav_graph.xml
@@ -8,12 +8,16 @@
     <fragment
         android:id="@+id/addBlogFragment"
         android:name="com.blog.app.ui.view.AddBlogFragment"
-        android:label="fragment_add_blog"
-        tools:layout="@layout/fragment_add_blog" />
+        android:label="Agregar Blog"
+        tools:layout="@layout/fragment_add_blog" >
+        <action
+            android:id="@+id/action_addBlogFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.blog.app.ui.view.HomeFragment"
-        android:label="fragment_home"
+        android:label="App BLogs"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_addBlogFragment"
@@ -26,11 +30,14 @@
     <fragment
         android:id="@+id/showBlogFragment"
         android:name="com.blog.app.ui.view.ShowBlogFragment"
-        android:label="fragment_show_blog"
+        android:label="Mostrar BLog"
         tools:layout="@layout/fragment_show_blog" >
             <argument
                 android:name="idblog"
                 app:argType="string"
                 android:defaultValue="1" />
+        <action
+            android:id="@+id/action_showBlogFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
