--- a/AppAndroid/app/src/main/res/values/colors.xml
+++ b/AppAndroid/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="floatcolor">#00a5aa</color>
+    <color name="cardViewColor">#B15A16</color>
+    <color name="bgFragment">#275b83</color>
+
 </resources>
